--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,36 @@
 .App {
+  font-family: 'Lato', sans-serif;
+  width: 400px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.header span{
+  width: 350px;
+  font-size: 20px;
+  display: table-cell;
+  height: 50px;
+  vertical-align: middle;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+#search-field {
+  margin-top: 10px;
+  -webkit-appearance: none;
+  width: 400px;
+  outline: 0;
+  border: 0;
+  border-bottom: 1.5px solid black;
+  text-align: center;
+  font-size: 15px;
+  font-family: 'Lato', sans-serif;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#github-logo {
+  float: left;
+  height: 50px;
 }
